# SmartParkingAllocation

./: AllocateEngine.cpp  AllocationEngine.h  CORS_FIX_SUMMARY.md  ParkingArea.cpp  ParkingArea.h  ParkingRequest.cpp  ParkingRequest.h  ParkingSlot.cpp  ParkingSlot.h  ParkingSystem.cpp  ParkingSystem.h  RollBackManager.cpp  RollBackManager.h  SERVER_FIXES.md  Server.cpp  Vehicle.cpp  Vehicle.h  Zone.cpp  Zone.h  build_server.bat  build_server.sh  run_app.bat  test_cors.html
frontend/: app.js  index.html  style.css
frontend/scripts/: app.js  state.js  ui.js
frontend/styles/: main.css
server/: CMakeLists.txt  README.md  server.cpp  test_api.sh
